# kirchhoff-eye

./: .gitignore  HOWTO.md  LICENSE  README.md  SKILL-ir-fix.md  SKILL.md  config.json  pyproject.toml  requirements.txt
benchmark/: ACCEPTANCE.md  NEXT_STAGE_BASELINE.md
catalog/: components.json
references/: circuitikz-style.md  electrical-plausibility-audit.md  ir-schema.md  perception-evidence-contract.md  perception-roadmap.md  semantic-redraw-scoring.md
schemas/: electrical-assessment.schema.json  electrical-audit.schema.json  ir.schema.json  label-positions.schema.json  patch-operations.schema.json  perception-evidence.schema.json  review-state.schema.json  review.schema.json
scripts/: compare.py  crop.py  gen_anchor_table.py  generate_synthetic_fixture.py  ir2tikz.py  ir_fix_and_render.py  irlib.py  render.py  score_ir.py  validate_ir.py
templates/: DELIVERY.md  FEEDBACK.md  anchors.json  component_label_positions.json  diff_table.md  electrical-assessment.json  ir_blank.json  standalone_head.tex
tests/: conftest.py  test_annotations.py  test_catalog.py  test_ci_workflows.py  test_cli_help.py  test_documentation_contract.py  test_electrical_cli.py  test_electrical_constraints.py  test_electrical_contract.py  test_electrical_graph.py  test_electrical_rules.py  test_electrical_values.py  test_ir2tikz.py  test_ir_fix_and_render.py  test_label_positions.py  test_packaging.py  test_perception_benchmark.py  test_perception_evidence.py  test_perception_intersections.py  test_perception_pin_attach.py  test_perception_pipeline.py  test_perception_preprocess.py  (+13 more)
(+69 files in other folders)
