[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "kirchhoff-eye"
version = "0.3.0"
description = "IR-driven circuit drawing Agent Skill with deterministic review and circuitikz workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Kirchhoff-eye contributors" }]
dependencies = [
  "Pillow>=9.0",
  "jsonschema>=4",
]

[project.optional-dependencies]
dev = [
  "coverage>=7",
  "pytest>=8",
  "tomli>=2; python_version < '3.11'",
]

[project.scripts]
kirchhoff-eye = "kirchhoff_eye.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kirchhoff_eye"]

[tool.hatch.build.targets.wheel.force-include]
"catalog" = "kirchhoff_eye/catalog"
"config.json" = "kirchhoff_eye/config.json"
"references" = "kirchhoff_eye/references"
"schemas" = "kirchhoff_eye/schemas"
"scripts" = "kirchhoff_eye/scripts"
"templates" = "kirchhoff_eye/templates"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
